# 2026UAVSwarm

./: .gitignore  2026UAVSwarm_目标机现场演示脚本.md  2026UAVSwarm_目标机离线迁移操作说明_极简保险版.md  2026UAVSwarm_阶段性综合报告_v1.docx  README.md  README_demo.md  pyproject.toml  requirements-full.txt  requirements-min.txt  requirements_full_from_env.txt  scripts_render_docs.py
2026综合无人平台/: DeploymentGuide_v2.docx  PDD_v2.docx  PRD_v2.docx  ProtocolSpec_v2.docx  UserManual_v2.docx
audit/: runtime.audit.jsonl
data/: tinystories_subset.txt
data/sft/: demo_sft.jsonl
demo/: app.js  index.html  styles.css
docs/: API_Spec.md  Deployment_Guide.md  PRD.md  Product_Design.md  Protocol_Spec.md  Security_Compliance.md  Test_Plan.md  User_Manual.md  adapter_selection_profiles.md  codebase_guide.md  demo_acceptance.md  demo_runbook.md  demo_scenarios.md  demo_video_script.md  deployment_profiles.md  future_mavlink_adapter_contract.md  project_summary.md  px4_sitl_dependency_and_environment_readiness_plan.md  px4_sitl_real_backend_minimal_plan.md  sitl_smoke_test_prep.md
docs/release/: v0_1_baseline_freeze.md
docs_export/: README.md
examples/: mission_demo.json  scene_demo.json
kb/: interaction_cases.md  protocol_specs.md
scripts/: run_demo.py
src/uav_runtime/: __init__.py
src/uav_runtime.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
swarm_ai_platform/: __init__.py  cli.py
tests/: conftest.py  test_cli.py  test_evaluator.py  test_gateway.py  test_health_service.py  test_plan_service.py  test_planner.py  test_protocol.py  test_sim_service.py  test_validation.py  test_world.py
(+114 files in other folders)
